--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ You can check the presentation of the project <a href="https://prezi.com/m3bya0g
 <li>Frameworks: Spring v4.0.6, Bootstrap v3.3.2</li>
 <li>Bootstrap Plugins: bootstrap-datepicker v1.0</li>
 <li>Spring Modules: Spring MVC v4.0.6, Spring-data-jpa v1.7.0, spring-test v4.0.6</li>
-<li>JDK v1.6 y v1.7</li>
+<li>JDK v1.6</li>
 <li>jQuery v.1.11.2</li>
 <li>jQuery Plugins: Sortable v1.2.0, jQuery Validation Plugin v1.13.1</li>
 <li>DataTables v1.10.5</li>
