--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="objective" class="anchor" href="#objective" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objective</h3>
 
-<p>The objetive of this project, it was done for my university, is to solve systems of linear equations problems by the following methods:</p>
+<p>The objective of this project, it was done for my university, is to solve systems of linear equations problems by the following methods:</p>
 
 <ul>
 <li>Addition</li>
@@ -35,12 +35,11 @@
 <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
-<p>In this web app, we have two differents users, teachers and students.</p>
+<p>In this web app we have two differents users, teachers and students, You can check the presentation of the project <a href="https://prezi.com/m3bya0gudl-j/pfc/">here</a>.</p>
 
 <ul>
 <li>The teacher can create new problems (there are several options) and check the answers of the students.</li>
-<li>The students can answer the new problems and check their previous answers.
-You can check the presentation of the project <a href="https://prezi.com/m3bya0gudl-j/pfc/">here</a>.</li>
+<li>The students can answer the new problems and check their previous answers.</li>
 </ul>
 
 <h3>
