--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h3>
 
-<p>In this web app we have two differents users, teachers and students, You can check the presentation of the project <a href="https://prezi.com/m3bya0gudl-j/pfc/">here</a>.</p>
+<p>In this web app we have two differents users, teachers and students, you can check the presentation of the project <a href="https://prezi.com/m3bya0gudl-j/pfc/">here</a>.</p>
 
 <ul>
 <li>The teacher can create new problems (there are several options) and check the answers of the students.</li>
